--- a/assets/stylesheets/resources/_helpers.scss
+++ b/assets/stylesheets/resources/_helpers.scss
@@ -10,6 +10,9 @@ Text and alignments
 .img-center  { margin-left: 50%; transform: translateX(-50%); }
 .clear:after { content: ''; clear: both; display: block; }
 
+.w-100       { width: 100%; }
+.h-100       { height: 100%; }
+
 .no-margin   { margin: 0 !important; }
 .no-padding  { padding: 0 !important; }
 
