--- a/assets/stylesheets/atoms/_base.scss
+++ b/assets/stylesheets/atoms/_base.scss
@@ -17,7 +17,7 @@ body {
   font-size: $font-size-baseline;
   letter-spacing: .02em;
   line-height: 150%;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 h1, h2, h3, h4, button, label, a {
