--- a/assets/stylesheets/pages/_brewery.scss
+++ b/assets/stylesheets/pages/_brewery.scss
@@ -1,22 +1,41 @@
 .present-section {
     .present {
         &-title {
-            margin-top: 8rem;
+            margin-bottom: 8rem;
+            margin-top: 6rem;
+
+            @include tablet {
+                margin-top: 0;
+            }
         }
 
         &-trademark {
             margin-left: 3rem;
+            width: 6rem;
+
+            @include tablet {
+                width: 9rem;
+            }
         }
 
         &-trademark-name {
             color: $gold;
-            font-size: $h5-font-size-sm;
+            font-size: $font-size-sm;
+
+            @include tablet {
+                font-size: $h5-font-size-sm;
+            }
         }
 
         &-beer {
             position: absolute;
-            right: 25rem;
-            bottom: 8rem;
+            right: -15rem;
+            bottom: 5rem;
+
+            @include tablet {
+                right: 25rem;
+                bottom: 8rem;
+            }
         }
 
         &-beer-img {
@@ -27,28 +46,63 @@
 }
 
 .process-section {
-    .process-intro-wrapper {
-        padding: 9rem 8rem 10rem 8rem;
+    .process-intro {
+        &-wrapper {
+            padding: 9rem 2rem 4rem 2rem;
+
+            @include tablet {
+                padding: 9rem 8rem 10rem 8rem;
+            }
+        }
+
+        &-title {
+            margin-bottom: 4rem;
+
+            @include tablet {
+                margin-bottom: 0;
+            }
+        }
+
     }
 
     .process-phase {
         &-title {
-            margin-bottom: 6rem;
+            margin-bottom: 2rem;
+            margin-top: 3rem;
+
+            @include tablet {
+                margin-top: 0;
+                margin-bottom: 6rem;
+            }
+        }
+
+        &-container {
+            margin-left: 2rem;
+            margin-right: 2rem;
         }
     }
 
     .leftsided-wrapper {
-        padding: 5rem 8rem 5rem 0rem;
+        padding: 5rem 0rem;
+
+        @include tablet {
+            padding: 5rem 8rem 5rem 0rem;
+        }
 
         .illustrated-img {
-            position: absolute;
-            left: -30%;
-            bottom: -10rem;
+            @include position(absolute, null, null, -10rem, -3rem);
+            @include tablet {
+                @include position(absolute, null, -30%, -10rem);
+            }
         }
     }
 
     .rightsided-wrapper {
-        padding: 5rem 0rem 5rem 8rem;
+        padding: 5rem 0rem;
+
+        @include tablet {
+            padding: 5rem 0rem 5rem 8rem;
+        }
 
         .illustrated-img {
             position: absolute;
@@ -62,7 +116,29 @@
     }
 
     .parallax-window {
-        min-height: 45rem;
+        min-height: 35rem;
         background: transparent;
+
+        @include tablet {
+            min-height: 45rem;
+        }
+    }
+}
+
+@media (max-width: 556px) {
+    .switcher-top {
+        -webkit-box-ordinal-group: 2;
+        -moz-box-ordinal-group: 2;
+        -ms-flex-order: 2;
+        -webkit-order: 2;
+        order: 2;
+    }
+
+    .switcher-bottom {
+        -webkit-box-ordinal-group: 1;
+        -moz-box-ordinal-group: 1;
+        -ms-flex-order: 1;
+        -webkit-order: 1;
+        order: 1;
     }
 }
